NIFI-14720 Switch from SSHJ to MINA SSHD for SFTP (#10124)
* NIFI-14720 Switched from SSHJ to MINA SSHD for SFTP

- Removed references to SSHJ
- Added Algorithm Configuration property to SFTP Processors
- Added SOCKS and HTTP Proxy support using extension of MINA SSHD Netty classes

* NIFI-14720 Corrected ordering of set File Attributes

- Replaced unsupported SO_TIMEOUT option with ReadTimeoutHandler

* NIFI-14720 Corrected Netty EventLoopGroup closing

- Switched to standard Thread Factory with single Thread
- Set WARN level for HostBoundPubkeyAuthentication class

* NIFI-14720 Corrected inefficient String blank checking